@@ -1,0 +1,58 @@
+<?php
+/***************************************************************
+*  Copyright notice
+*
+*  (c) 2012 In Cité Solution <technique@in-cite.net>
+*  All rights reserved
+*
+*  This script is part of the TYPO3 project. The TYPO3 project is
+*  free software; you can redistribute it and/or modify
+*  it under the terms of the GNU General Public License as published by
+*  the Free Software Foundation; either version 2 of the License, or
+*  (at your option) any later version.
+*
+*  The GNU General Public License can be found at
+*  http://www.gnu.org/copyleft/gpl.html.
+*
+*  This script is distributed in the hope that it will be useful,
+*  but WITHOUT ANY WARRANTY; without even the implied warranty of
+*  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+*  GNU General Public License for more details.
+*
+*  This copyright notice MUST APPEAR in all copies of the script!
+***************************************************************/
+
+/** 
+ * Hit download and provide file
+ *
+ * @author    Tsi Yang <tsi@in-cite.net>
+ * @package    TYPO3
+ */
+require_once(PATH_tslib . 'class.tslib_fe.php');
+require_once(t3lib_extMgm::extPath('ics_od_datastore') . 'downloadfile/class.tx_icsoddatastore_hitcounter.php');
+require_once(t3lib_extMgm::extPath('ics_od_datastore') . 'downloadfile/class.tx_icsoddatastore_dlfile.php');
+
+tslib_eidtools::connectDB();
+
+$fileID = t3lib_div::_GP('file');
+
+$rows = $GLOBALS['TYPO3_DB']->exec_SELECTgetRows(
+	'uid, file, pid, format',
+	'tx_icsoddatastore_files',
+	'deleted = 0 AND uid = ' . $fileID,
+	'',
+	'',
+	'1'
+);
+
+if (is_array($rows) && !empty($rows)) {
+	$hit = t3lib_div::makeInstance('tx_icsoddatastore_hitcounter');
+	$hit->main($rows[0]);
+	
+	$dl = t3lib_div::makeInstance('tx_icsoddatastore_dlfile');
+	$dl->main($rows[0]);
+} else {
+	header("HTTP/1.0 404 Not Found");
+	echo "<html><body><h1>Page not found</h1></body></html>";
+	die();
+}
