@@ -1,0 +1,2 @@
+# cat=Basic//a; type=int; label=Stats method: Activate the stats download. Methods : 1 => method 302, 2 => method readfile, other => no stats
+stats=0
