@@ -13,6 +13,9 @@ t3lib_extMgm::addPItoST43($_EXTKEY, 'pi2/class.tx_icsoddatastore_pi2.php', '_pi2
 t3lib_extMgm::addPItoST43($_EXTKEY, 'pi3/class.tx_icsoddatastore_pi3.php', '_pi3', 'list_type', 0);
 
 
+$TYPO3_CONF_VARS['FE']['eID_include']['ics_od_datastoredownload'] = 'EXT:ics_od_datastore/downloadfile/class.tx_icsoddatastore_download.php';
+
+
 //--- API commands ---
 
 
