@@ -226,7 +226,7 @@
 			<!-- ###PICTO_ITEM### start -->
 				<div class="###PREFIXID###_pictoItem">
 					<div class="###PREFIXID###_file"><!--###LINK_ITEM###-->###PICTO###<!-- ###FILEEXT### --><!--###LINK_ITEM###--></div>
-					<div class="###PREFIXID###md5">###FILEMD5###</div>
+					<div class="###PREFIXID###_md5">###FILEMD5###</div>
 					<div class="###PREFIXID###_fileSize">###FILESIZE###</div>
 				</div>
 			<!-- ###PICTO_ITEM### end -->
